--- a/Accessory_figs_2016.Rmd
+++ b/Accessory_figs_2016.Rmd
@@ -1,7 +1,7 @@
 #Figure 1. Correlations of various reproductive investment categories against plant weight
 ```{r}
-#win.metafile("figs2/Accessory_Costs/Figure01_correlations_with_plant_weight.wmf", height=9, width=13)
-#plot
+win.metafile("figs2/Accessory_Costs/Figure01_correlations_with_plant_weight.wmf", height=9, width=13)
+plot
 
 par(mfrow=c(2,3), cex=1, omi=c(1,0.1,.1,0.05), mai=c(.2,.55,.1,0.1))
 options(scipen = 2)
@@ -13,7 +13,7 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,log="xy",xlim=c(10,10000000),ylim=c(1,1000000),xlab="",ylab="",lty=results$linetype,xaxt="n")
+plot(fit,col=col.spp(fit$groupsummary$group),log="xy",xlim=c(10,10000000),ylim=c(1,1000000),xlab="",ylab="",lty=results$linetype,xaxt="n",pch=20)
 mod <- lm(log10(total_weight_0)~log10(repro_inv),data=subset(SummaryInd,repro_inv>0))
 words.top.left.logxy(mod)
 mtext(text="total reproductive investment (mg)",side=2,line=2.3,outer=FALSE)
@@ -24,7 +24,7 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,log="xy",xlim=c(10,10000000),ylim=c(1,1000000),xlab="",ylab="",lty=results$linetype,xaxt="n",yaxt="n")
+plot(fit,col=col.spp(fit$groupsummary$group),log="xy",xlim=c(10,10000000),ylim=c(1,1000000),xlab="",ylab="",lty=results$linetype,xaxt="n",yaxt="n",pch=20)
 mod <- lm(log10(total_weight_0)~log10(fruit_weight),data=subset(SummaryInd,fruit_weight>0))
 words.top.left.logxy(mod)
 mtext(text="investment in fruit (mg)",side=2,line=0.6,outer=FALSE)
@@ -35,7 +35,7 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,log="xy",xlim=c(10,10000000),ylim=c(1,1000000),xlab="",ylab="",lty=results$linetype,xaxt="n",yaxt="n")
+plot(fit,col=col.spp(fit$groupsummary$group),log="xy",xlim=c(10,10000000),ylim=c(1,1000000),xlab="",ylab="",lty=results$linetype,xaxt="n",yaxt="n",pch=20)
 mod <- lm(log10(total_weight_0)~log10(propagule_inv),data=subset(SummaryInd,propagule_inv>0))
 words.top.left.logxy(mod)
 mtext(text="investment in propagules (mg)",side=2,line=0.6,outer=FALSE)
@@ -47,7 +47,7 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,log="xy",xlim=c(10,10000000),ylim=c(1,1000000),xlab="",ylab="",lty=results$linetype)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=20,log="xy",xlim=c(10,10000000),ylim=c(1,1000000),xlab="",ylab="",lty=results$linetype)
 mod <- lm(log10(total_weight_0)~log10(prepollen_all_inv),data=subset(SummaryInd,prepollen_all_inv>0))
 words.top.left.logxy(mod)
 mtext(text="investment in prepollination tissues (mg)",side=2,line=2.3,outer=FALSE)
@@ -58,7 +58,7 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit, pch=16, col = col.spp(fit$groupsummary$group),lty=results$linetype,xlim=c(10,10000000),ylim=c(1,1000000),xlab="total weight (mg)",ylab="repro all count",yaxt="n")
+plot(fit, pch=20, col = col.spp(fit$groupsummary$group),lty=results$linetype,xlim=c(10,10000000),ylim=c(1,1000000),xlab="total weight (mg)",ylab="repro all count",yaxt="n")
 mtext(text="count of all reproductive units",side=2,line=0.6,outer=FALSE)
 
 xvar <- "total_weight_0"
@@ -67,47 +67,58 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit, pch=16, col = col.spp(fit$groupsummary$group),lty=results$linetype,xlim=c(10,10000000),ylim=c(1,1000000),xlab="total weight (mg)",ylab="repro all count",yaxt="n",lwd=results$linewidth)
+plot(fit, pch=20, col = col.spp(fit$groupsummary$group),lty=results$linetype,xlim=c(10,10000000),ylim=c(1,1000000),xlab="total weight (mg)",ylab="repro all count",yaxt="n")
 mtext(text="seed count",side=2,line=0.6,outer=FALSE)
 mtext(text="total plant weight (mg)",side=1,line=1.5,outer=TRUE)
 
-#dev.off()
+dev.off()
 ```
 
 #In other words, for many species, seed counts do not provide an accurate estimate of reproductive investment
 ```{r}
-xvar <- "repro_inv"
-yvar <- "seed_count"
+win.metafile("figs2/Accessory_Costs/Figure02_correlations_with_repro_inv.wmf", height=6, width=13)
+plot
+
+par(mfrow=c(1,3), cex=1, omi=c(1,0.4,.1,0.05), mai=c(.2,.4,.1,0.1))
+options(scipen = 2)
+
+yvar <- "repro_inv"
+xvar <- "repro_all_count"
 data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-#plot(fit,xlab=xvar,ylab=yvar,pch=16, col = col.spp(fit$groupsummary$group),lty=results$linetype)
+plot(fit,xlab="",ylab="",pch=16, col=col.spp(fit$groupsummary$group),lty=results$linetype,ylim=c(2,300000))
+mtext(text="propagule investment (mg)",side=1,line=2,outer=FALSE)
+mtext(text="reproductive investment (mg)",side=2,line=1,outer=TRUE)
+legend_with_r2(results,"bottomright")
 
 write.csv(results, file="figs2/Accessory_Costs/Table01a_seed_count_vs_repro_inv.csv",row.names=FALSE)
-```
 
-
-```{r}
-xvar <- "repro_inv"
-yvar <- "diameter"
+yvar <- "repro_inv"
+xvar <- "propagule_inv"
 data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- fit$groupsummary
+plot(fit,xlab=xvar,ylab="",pch=16, col=col.spp(fit$groupsummary$group),lty=results$linetype,yaxt="n",ylim=c(2,300000))
+mtext(text="count of buds initiated",side=1,line=2,outer=FALSE)
+legend_with_r2(results,"bottomright")
 
-write.csv(results, file="figs2/Accessory_Costs/Table01b_diameter_vs_repro_inv.csv",row.names=FALSE)
-```
+write.csv(results, file="figs2/Accessory_Costs/Table01b_repro_all_count_vs_repro_inv.csv",row.names=FALSE)
 
-```{r}
-xvar <- "repro_inv"
-yvar <- "repro_all_count"
+yvar <- "repro_inv"
+xvar <- "diameter"
 data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- fit$groupsummary
+plot(fit,xlab=xvar,ylab="",pch=16, col=col.spp(fit$groupsummary$group),lty=results$linetype,yaxt="n",ylim=c(2,300000))
+mtext(text="stem diameter (mm)",side=1,line=2,outer=FALSE)
+legend_with_r2(results,"bottomright")
 
-write.csv(results, file="figs2/Accessory_Costs/Table01c_repro_all_count_vs_repro_inv.csv",row.names=FALSE)
+write.csv(results, file="figs2/Accessory_Costs/Table01c_diameter_vs_repro_inv.csv",row.names=FALSE)
+dev.off()
 ```
 
 #Appendix Fig 1. Correlations with leaf investment  
@@ -138,7 +149,7 @@ dev.off()
 
 #Table showing accessory cost values for the species
 ```{r}
-acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_size,seed_to_ovule_ratio,accessory_per_seed,total_accessory_Lord,prepollencosts,b_div_p,c_div_p,dispersalcosts_increment,dispersalcosts_increment2)
+acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_size,seed_to_ovule_ratio,accessory_per_seed,total_accessory_Lord,prepollencosts,b_div_p,c_div_p,dispersalcosts_increment,dispersalcosts_increment2,prop_accessory_nonzero)
 acc_costs_spp$species <- labels.spp.full()
 acc_costs_spp <- format(acc_costs_spp, digit=2)
 
@@ -147,54 +158,72 @@ write.csv(acc_costs_spp, file="figs2/Accessory_Costs/Table02_AccCosts_by_Species
 
 #Figure 2 and Table 3. Scaling of accessory costs versus seed size, by species
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure02_acc_cost_seed_size_4panel.wmf", height=9, width=9)
+win.metafile("figs2/Accessory_Costs/Figure02_acc_cost_seed_size_4panel.wmf", height=8, width=12)
 plot
 
-par(mfrow=c(2,2), cex=1, omi=c(.5,.1,.1,.1), mai=c(.1,1,.3,.1)) 
+par(mfrow=c(2,3), cex=1, omi=c(.5,.1,.1,.1), mai=c(.1,1,.3,.1)) 
 options(scipen = 5)
 
-plot(accessory_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylab="total per seed accessory costs",xlab="",xaxt="n")
+plot(accessory_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="total per seed accessory costs (mg/seed)",xlab="",xaxt="n",cex=1.5)
 mod <- lm(log10(accessory_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0))
 words.top.left.logxy(mod)
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$accessory_per_seed,SummarySpp[["se"]]$accessory_per_seed)
 slopes <- sma(log10(accessory_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],slope.test=1))
-#summary(slopes)
-slopes2 <- as.matrix(coef(slopes))
-abline((slopes2[1]),(slopes2[2]))
-abline((slopes2[1]),1,col="red")
+abline(slopes$coef[[1]][1,1],slopes$coef[[1]][2,1])
+abline(slopes$coef[[1]][1,1],1,col="red")
+acc_by_species <- slopes$coef[[1]]
+# 
+# plot(b_div_p ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="all pre-pollination accessory costs (mg/seed)",xlab="",xaxt="n",cex=1.5)
+# mod <- lm(log10(b_div_p) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0))
+# words.top.left.logxy(mod)
+# y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$b_div_p,SummarySpp[["se"]]$b_div_p)
+# slopes <- sma(log10(b_div_p) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],slope.test=1,groupsummary=TRUE))
+# abline(slopes$coef[[1]][1,1],slopes$coef[[1]][2,1])
+# abline(slopes$coef[[1]][1,1],1,col="red")
+# acc_by_species <- dplyr::bind_rows(acc_by_species, slopes$coef[[1]])
 
-plot(b_div_p ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylab="pre-pollination accessory costs",xlab="",xaxt="n")
-mod <- lm(log10(b_div_p) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0))
-words.top.left.logxy(mod)
-slopes <- sma(log10(b_div_p) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],slope.test=1,groupsummary=TRUE))
-#summary(slopes)
+plot(prepollencosts ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen success costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(prepollencosts) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]))
+words.bottom.right.logxy(mod)
+extra.topleft.logxy("slope <1, so bigger seeded species have lower fixed costs of making pre-pollination parts")
+slopes <- sma(log10(prepollencosts) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]),slope.test=1)
+abline(slopes$coef[[1]][1,1],slopes$coef[[1]][2,1])
+abline(slopes$coef[[1]][1,1],1,col="red")
+acc_by_species <- dplyr::bind_rows(acc_by_species, slopes$coef[[1]])
 
-slopes3 <- as.matrix(coef(slopes))
-abline((slopes3[1]),(slopes2[2]))
-abline((slopes3[1]),1,col="red")
+plot(prepollen_failure_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(prepollen_failure_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]))
+words.bottom.right.logxy(mod)
+extra.topleft.logxy("the per seed costs of failure scale isometrically with seed size")
+slopes <- sma(log10(prepollen_failure_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]),slope.test=1)
+abline(slopes$coef[[1]][1,1],slopes$coef[[1]][2,1])
+abline(slopes$coef[[1]][1,1],1,col="red")
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollen_failure_per_seed,SummarySpp[["se"]]$prepollen_failure_per_seed)
+acc_by_species <- dplyr::bind_rows(acc_by_species, slopes$coef[[1]])
 
-plot(c_div_p ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"),col=col.spp(species),pch=16,log="xy", ylab="aborted fruit accessory costs",xlab="")
+plot(c_div_p ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="aborted fruit accessory costs (mg/seed)",xlab="",cex=1.5,xaxt="n")
 mod <- lm(log10(c_div_p) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0&species!="COER"&species!="BAER"))
 words.top.left.logxy(mod)
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$c_div_p,SummarySpp[["se"]]$c_div_p)
 slopes <- sma(log10(c_div_p) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],species!="COER"&species!="BAER"),slope.test=1)
-#summary(slopes)
-slopes4 <- as.matrix(coef(slopes))
-abline((slopes4[1]),(slopes2[2]))
-abline((slopes4[1]),1,col="red")
+abline(slopes$coef[[1]][1,1],slopes$coef[[1]][2,1])
+abline(slopes$coef[[1]][1,1],1,col="red")
+acc_by_species <- dplyr::bind_rows(acc_by_species, slopes$coef[[1]])
 
-plot(dispersalcosts_increment ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylab="dispersal & packaging accessory costs",xlab="")
+plot(dispersalcosts_increment ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(dispersalcosts_increment) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],species!="LEES"))
 words.top.left.logxy(mod)
 slopes <- sma(log10(dispersalcosts_increment) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]),slope.test=1)
-#slopes5 <- as.matrix(sma(log10(dispersalcosts_increment) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]),slope.test=1)[1])
+abline(slopes$coef[[1]][1,1],slopes$coef[[1]][2,1])
+abline(slopes$coef[[1]][1,1],1,col="red")
+acc_by_species <- dplyr::bind_rows(acc_by_species, slopes$coef[[1]])
 
-slopes5 <- as.matrix(coef(slopes))
-abline((slopes5[1]),(slopes2[2]))
-abline((slopes5[1]),1,col="red")
+acc_by_species$names = c("intercept","slope","intercept","slope","intercept","slope","intercept","slope","intercept","slope")
+acc_by_species$variable = c("acc cost","acc cost","prepollen_success","prepollen_success","prepollen_failure","prepollen_failure","c div p","c div p","dispersal","dispersal")
 
-Table3 <- data.frame(component=c("total accessory costs","b div p","c div p","dispersal"))
-Table3$intercept = c(slopes2[1],slopes3[1],slopes4[1],slopes5[1])
-Table3$slope = c(slopes2[2],slopes3[2],slopes4[2],slopes5[2])
-write.csv(Table3, file="figs2/Accessory_Costs/Table03_AccCosts_coeff.csv",row.names=FALSE)
+write.csv(acc_by_species, file="figs2/Accessory_Costs/Table03_acc_by_species.csv",row.names=FALSE)
+
+
 
 mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
 
@@ -202,13 +231,16 @@ dev.off()
 ```
 
 ```{r}
-plot(total_weight_0~seed_size,data=subset(SummaryInd,total_weight_0>0),col=col.spp(species),pch=16,log="xy")
-mod <- lm(log10(seed_size)~log10(total_weight),data=subset(SummarySpp[["mean"]],total_weight>0))
+win.metafile("figs2/Accessory_Costs/Figure_seedset_vs_seedsize.wmf", height=5, width=5)
+plot
+
+par(mfrow=c(1,1), cex=1, omi=c(1,1,.1,.1), mai=c(1,1,.5,.5)) 
+plot(seedset~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=2)
+mod <- lm(log10(seed_size)~log10(seedset),data=subset(SummarySpp[["mean"]]))
+#abline(mod$coefficients[1],mod$coefficients[2])
 words.top.left.logxy(mod)
 
-plot(seedset~seed_size,data=subset(SummaryInd,seedset>0),col=col.spp(species),pch=16,log="xy")
-mod <- lm(log10(seed_size)~log10(seedset),data=subset(SummarySpp[["mean"]],seedset>0))
-words.top.left.logxy(mod)
+dev.off()
 ```
 
 #Table 4 and Figure 3.Per seed accessory costs are lower in individuals with higher seed count. 
@@ -231,8 +263,7 @@ points(accessory_per_seed~seed_count,data=subset(SummarySpp[["mean"]],accessory_
 points(accessory_per_seed~seed_count,data=subset(SummarySpp[["mean"]],accessory_per_seed>0&seed_count>0),col=col.spp(species),pch=16,cex=2)
 mod <- lm(log10(accessory_per_seed)~log10(seed_count),data=subset(SummarySpp[["mean"]]))
 words.top.right.logxy(mod)
-#abline(coef(mod)[1],coef(mod)[2],lwd=3)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
+legend_with_r2(results,"bottomleft")
 
 results
 write.csv(results, file="figs2/Accessory_Costs/Table04a_seedcount_vs_accessory.csv",row.names=FALSE)
@@ -244,10 +275,10 @@ dev.off()
 
 #Table 4 extra - showing propagule investment instead of seed_count. Could also replace with seedset
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure_EXTRA_acc_cost_by_seedset.wmf", height=5, width=5)
+win.metafile("figs2/Accessory_Costs/Figure_acc_cost_by_seedset.wmf", height=9, width=9)
 plot
 
-par(mfrow=c(1,1), cex=1, omi=c(1,1,.1,.1), mai=c(1,1,.5,.5)) 
+par(mfrow=c(2,2), cex=1, omi=c(.5,.1,.1,.1), mai=c(.1,1,.3,.1)) 
 
 xvar <- "seedset"
 yvar <- "accessory_per_seed"
@@ -255,103 +286,10 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab="total accessory costs (mg/seed)",lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000),xaxt="n")
+legend_with_r2(results,"bottomleft")
 
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-
-format(results, digit=2)
 write.csv(results, file="figs2/Accessory_Costs/Table04b_seedset_vs_accessory.csv",row.names=FALSE)
-
-dev.off()
-```
-
-#Higher RE does not lead to lower accessory costs
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1)) 
-
-xvar <- "repro_inv"
-yvar <- "accessory_per_seed"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-
-format(results, digit=2)
-write.csv(results, file="figs2/Accessory_Costs/Table05a_accessory_vs_RE.csv",row.names=FALSE)
-```
-
-#Higher RA does not lead to lower accessory costs
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1)) 
-
-xvar <- "RA"
-yvar <- "accessory_per_seed"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-
-format(results, digit=2)
-write.csv(results, file="figs2/Accessory_Costs/Table05b_accessory_vs_RA.csv",row.names=FALSE)
-```
-
-#Not a single species shows a reduction in per seed accessory costs with increased plant size.Indeed, EPMI has higher pre-pollination accessory costs    (slope = 0.38, r2=0.19, p=0.019) and accessory costs due to aborted fruit and seeds (slope = 0.83, r2=0.268, p=0.019) in larger individuals, as larger individuals of this species have lower seedset (slope = -0.31, r2=0.198, p=0.018). GRSP also has a nearly significant decline in seedset in larger individuals (slope = -0.78, r2=0.298, p=0.067).
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1))
-
-xvar <- "total_weight_0"
-yvar <- "accessory_per_seed"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-
-format(results, digit=2)
-write.csv(results, file="figs2/Accessory_Costs/Table05c_accessory_vs_total_weight.csv",row.names=FALSE)
-```
-
-
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1)) 
-
-xvar <- "age"
-yvar <- "accessory_per_seed"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-
-format(results, digit=2)
-write.csv(results, file="figs2/Accessory_Costs/Table05d_accessory_vs_age.csv",row.names=FALSE)
-```
-
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1)) 
-
-xvar <- "total_weight"
-yvar <- "seedset"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-
-format(results, digit=2)
-write.csv(results, file="figs2/Accessory_Costs/Table0xx_total_size_by_seedset.csv",row.names=FALSE)
-```
-
-#Considering the individual components of accessory costs vs. seedset - since seedset best predictor of accessory costs
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1)) 
 
 xvar <- "seedset"
 yvar <- "b_div_p"
@@ -359,15 +297,10 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(results$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
+plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab="b div p = pre-pollination costs (mg/seed)",lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000),xaxt="n")
+legend_with_r2(results,"bottomleft")
 
-format(results, digit=2)
 write.csv(results, file="figs2/Accessory_Costs/Table06a_b_div_p_vs_seedset.csv",row.names=FALSE)
-```
-
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1)) 
 
 xvar <- "seedset"
 yvar <- "c_div_p"
@@ -375,11 +308,24 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy") 
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(results$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
+plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab="c div p = aborted post pollination (mg/seed)",lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000))
+legend_with_r2(results,"bottomleft")
 
-format(results, digit=2)
+
 write.csv(results, file="figs2/Accessory_Costs/Table06b_c_div_p_vs_seedset.csv",row.names=FALSE)
+
+xvar <- "seedset"
+yvar <- "packaging_dispersal_per_seed"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab=yvar,lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000))
+legend_with_r2(results,"bottomleft")
+mtext(text="seedset",side=1,line=1.5,outer=TRUE)
+
+
+dev.off()
 ```
 
 ```{r}
@@ -389,31 +335,90 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(results$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
+
+results <- select(results,group,r2)
+names(results) <- c("species","r2")
 
 results$ovules_per_fruit <- c(60,4,1,1,2,2,2,4,1,40,2,20,2)
 max_seedset <- select(SummarySpp[["max"]],species,seedset) 
 min_seedset <- select(SummarySpp[["min"]],species,seedset) 
 results <- merge(results, max_seedset, by=c("species"), all=TRUE)
 results <- merge(results, min_seedset, by=c("species"), all=TRUE)
-names(results)=c("species","r2","p-value","n","intercept","slope","ovules_per_fruit","max_seedset","min_seedset")
-
-format(results, digit=2)
+names(results)=c("species","r2","ovules_per_fruit","max_seedset","min_seedset")
 
 win.metafile("figs2/Accessory_Costs/Table07_dispcosts_vs_ovules.wmf", height=6, width=6)
 plot
 
 par(mfrow=c(1,1), cex=1, omi=c(.4,.4,.1,.1), mai=c(.8,.8,.2,.2)) 
-plot(ovules_per_fruit~r2,data=subset(results,species!="PELA"),log="y",col=col.spp(species),pch=16,cex=2)
+plot(ovules_per_fruit~r2,data=subset(results,species!="PELA"),log="y",col=col.spp(species),pch=16,cex=2,xlab="ovules per fruit",ylab="strength of correlation between dispersal costs and seedset")
 mod <- lm(r2~log10(ovules_per_fruit),data=subset(results,species!="PELA"))
 words.bottom.right.logy(mod)
 dev.off()
 
-results
-
 write.csv(results, file="figs2/Accessory_Costs/Table06c_dispersal_vs_seedset.csv",row.names=FALSE)
 ```
+
+#Higher RE, RA, plant size do not lead to lower accessory costs; age shows mixed results
+##Not a single species shows a reduction in per seed accessory costs with increased plant size.Indeed, EPMI has higher pre-pollination accessory costs    (slope = 0.38, r2=0.19, p=0.019) and accessory costs due to aborted fruit and seeds (slope = 0.83, r2=0.268, p=0.019) in larger individuals, as larger individuals of this species have lower seedset (slope = -0.31, r2=0.198, p=0.018). GRSP also has a nearly significant decline in seedset in larger individuals (slope = -0.78, r2=0.298, p=0.067).
+```{r}
+win.metafile("figs2/Accessory_Costs/Figure_RE_RA_size_age_patterns.wmf", height=8, width=8)
+plot
+
+par(mfrow=c(2,2), cex=1, omi=c(.1,0.4,.1,0.05), mai=c(.6,.3,.1,0.1))
+options(scipen = 2)
+
+xvar <- "repro_inv"
+yvar <- "accessory_per_seed"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab=yvar,lty=results$linetype)
+mtext(text="reproductive investment (mg) (RE)",side=1,line=2,outer=FALSE)
+legend_with_r2(results,"bottomright")
+
+write.csv(results, file="figs2/Accessory_Costs/Table05a_accessory_vs_RE.csv",row.names=FALSE)
+ 
+xvar <- "RA"
+yvar <- "accessory_per_seed"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0&SummaryInd$age>2)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab="",lty=results$linetype)
+mtext(text="RA",side=1,line=2,outer=FALSE)
+legend_with_r2(results,"topleft")
+
+write.csv(results, file="figs2/Accessory_Costs/Table05b_accessory_vs_RA.csv",row.names=FALSE)
+
+xvar <- "total_weight_0"
+yvar <- "accessory_per_seed"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab=yvar,lty=results$linetype)
+mtext(text="total plant size (mg)",side=1,line=2,outer=FALSE)
+legend_with_r2(results,"bottomright")
+
+write.csv(results, file="figs2/Accessory_Costs/Table05c_accessory_vs_total_weight.csv",row.names=FALSE)
+
+xvar <- "age"
+yvar <- "accessory_per_seed"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab="",lty=results$linetype)
+mtext(text="age (years)",side=1,line=2,outer=FALSE)
+mtext(text="per seed accessory costs (mg/seed)",side=2,line=1,outer=TRUE)
+legend_with_r2(results,"topleft")
+
+write.csv(results, file="figs2/Accessory_Costs/Table05d_accessory_vs_age.csv",row.names=FALSE)
+dev.off()
+```
+
+#Considering the individual components of accessory costs vs. seedset - since seedset best predictor of accessory costs
 
 #For each species the accessory cost components that cause shifts in total accessory costs is different and reflects both which components are largest and whichvary most with some factor - seedset, age, etc.
 ```{r}
@@ -475,130 +480,60 @@ results <- lines(fit$groupsummary)
 plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
 ```
 
-species with bigger seeds, lower seedset spend less per flower. Here taking the percent of the cost to make a single flower that goes into pre-pollination parts
-
 ```{r}
-par(mfrow=c(2,2), cex=1, omi=c(1,0.1,.1,0.05), mai=c(.2,.55,.1,0.1))
+win.metafile("figs2/Accessory_Costs/Figure_success_vs_failure.wmf", height=6, width=8)
+plot
 
-plot(percent_prepollencosts~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=1.5)
+par(mfrow=c(1,2), cex=1, omi=c(.8,.1,.1,.1), mai=c(.1,.8,.1,.1)) 
+
+xvar <- "repro_inv"
+yvar <- "prop_propagule"
+
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,lty=results$linetype,ylim=c(.001,1),xlab="",ylab="prop repro energy to propagules")
+abline(-0.30103,0,lwd=2)
+abline(-1,0,lwd=2)
+
+xvar <- "repro_inv"
+yvar <- "percent_for_success"
+
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,lty=results$linetype,ylim=c(.001,1),xlab="",ylab="prop repro energy to success")
+abline(-0.30103,0,lwd=2)
+abline(-1,0,lwd=2)
+mtext(text="reproductive investment (mg)",side=1,line=2,outer=TRUE)
+
+dev.off()
+```
+
+#species with bigger seeds, lower seedset spend less per flower. Here taking the percent of the cost to make a single flower that goes into pre-pollination parts
+```{r}
+win.metafile("figs2/Accessory_Costs/Figure_costs_to_make_1_seed.wmf", height=4, width=12)
+plot
+
+par(mfrow=c(1,3), cex=1, omi=c(.8,0.1,.1,0.05), mai=c(.1,.8,.1,0.1))
+
+plot(seedcosts~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=1.5,xlab="",ylab="all costs to make 1 seed (mg) = seedcosts")
+mod <- lm(log10(seed_size)~log10(seedcosts),data=subset(SummarySpp[["mean"]]))
+extra.topleft.logxy("total accessory costs required to produce 1 seed are lower for smaller seeded species")
+words.bottom.left.logxy(mod)
+
+plot(percent_prepollencosts~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=1.5,xlab="",ylab="prop seedcosts for prepollination")
+extra.topleft.logxy("species with big seeds have low costs of producing a single flower")
 mod <- lm(log10(seed_size)~log10(percent_prepollencosts),data=subset(SummarySpp[["mean"]]))
 words.bottom.left.logxy(mod)
 
-plot(percent_prepollencosts~seedset,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=1.5)
-mod <- lm(log10(seedset)~log10(percent_prepollencosts),data=subset(SummarySpp[["mean"]]))
-words.top.left.logxy(mod)
-
-plot(percent_dispersalcosts~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=1.5)
-mod <- lm(log10(seed_size)~log10(percent_dispersalcosts),data=subset(SummarySpp[["mean"]]))
+plot(percent_dispersalcosts~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=1.5,xlab="",ylab="prop seedcosts for dispersal")
+extra.topleft.logxy("species with big seeds have high packaging and dispersal costs")
+mod <- lm(log10(seed_size)~log10(percent_dispersalcosts),data=subset(SummarySpp[["mean"]],percent_dispersalcosts>0))
 words.bottom.left.logxy(mod)
+mtext(text="seed size (mg)",side=1,line=2,outer=TRUE)
 
-plot(percent_dispersalcosts~seedset,data=subset(SummarySpp[["mean"]],percent_dispersalcosts>0),col=col.spp(species),pch=16,log="xy",cex=1.5)
-mod <- lm(log10(seedset)~log10(percent_dispersalcosts),data=subset(SummarySpp[["mean"]],percent_dispersalcosts>0))
-words.top.left.logxy(mod)
+dev.off()
 ```
-
-SummarySpp[["mean"]]$percent_dispersalcosts
-#*******************************
-#below this line: results probably not used in manuscript
-#*******************************
-#With increasing seed count, not only do total per seed accessory costs decline, but so do the individual components. 
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1)) 
-
-xvar <- "seed_count"
-yvar <- "b_div_p"
-
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-
-results
-write.csv(results, file="figs2/Accessory_Costs/Table0xx_b_div_p_vs_seed_count.csv",row.names=FALSE)
-```
-
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1)) 
-
-xvar <- "seed_count"
-yvar <- "c_div_p"
-
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-
-results
-write.csv(results, file="figs2/Accessory_Costs/Table0xx_c_div_p_vs_seed_count.csv",row.names=FALSE)
-```
-
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1)) 
-
-xvar <- "seed_count"
-yvar <- "packaging_dispersal_per_seed"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-
-format(results,digits=2)
-write.csv(results, file="figs2/Accessory_Costs/Table0xx_dispersal_vs_seed_count.csv",row.names=FALSE)
-```
-
-par(mfrow=c(2,3), cex=1, omi=c(1,0.1,.1,0.05), mai=c(.2,.55,.1,0.1))
-options(scipen = 2)
-
-plot(propagule_inv~repro_inv,data=subset(SummaryInd,propagule_inv>0),col=col.spp(species),pch=16,log="xy",xlim=c(10,1000000),ylim=c(1,50000),xaxt="n")
-mod <- lm(log10(repro_inv)~log10(propagule_inv),data=subset(SummaryInd,propagule_inv>0))
-words.top.left.logxy(mod)
-#mtext(text="investment in propagules (mg)",side=2,line=2.3,outer=FALSE)
-
-plot(total_weight_0~repro_inv,data=subset(SummaryInd,propagule_inv>0),col=col.spp(species),pch=16,log="xy",xlim=c(10,1000000),ylim=c(1,1000000),xaxt="n")
-mod <- lm(log10(repro_inv)~log10(total_weight_0),data=subset(SummaryInd,repro_inv>0))
-words.top.left.logxy(mod)
-#mtext(text="investment in propagules (mg)",side=2,line=2.3,outer=FALSE)
-
-plot(repro_all_count~repro_inv,data=subset(SummaryInd,propagule_inv>0),col=col.spp(species),pch=16,log="xy",xlim=c(10,1000000),xaxt="n")
-mod <- lm(log10(repro_inv)~log10(repro_all_count),data=subset(SummaryInd,repro_all_count>0))
-words.top.left.logxy(mod)
-
-plot(costs_for_success~costs_for_failure,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
-abline(0,1)
-
-par(mfrow=c(1,1), cex=1, omi=c(.2,.2,.1,.1), mai=c(1,1,.1,.1)) 
-xvar <- "repro_inv"
-yvar <- "percent_for_success"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-
-plot(percent_for_success~repro_inv,data=subset(SummaryInd,percent_for_success>0),col=col.spp(species),pch=16,log="xy")
-points(prop_propagule~repro_inv,data=subset(SummaryInd,prop_propagule>0),pch=1,col=col.spp(species))
-abline(-1,0)
-abline(.0001,0)
-
-plot(prop_propagule~repro_inv,data=subset(SummaryInd,prop_propagule>0),col=col.spp(species),pch=16,log="xy")
-mod <- lm(log10(repro_inv)~log10(repro_all_count),data=subset(SummaryInd,prop_propagule>0))
-summary(mod)
-
-points(prop_propagule_nonzero~repro_inv,data=subset(SummarySpp[["mean"]],prop_propagule>0),col="black",pch=16,cex=2.5)
-points(prop_propagule_nonzero~repro_inv,data=subset(SummarySpp[["mean"]],prop_propagule>0),col=col.spp(species),pch=16,cex=1.5)
-1-mean(SummarySpp[["mean"]]$prop_propagule_nonzero)
-
-for(i in 1:13) {
-abline((results[i,5]),(results[i,6]),col=col.spp(results$species[i]))
-}
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-
-points(prop_propagule~repro_inv,data=subset(SummaryInd,prop_propagule>0),pch=1,col=col.spp(species))
-abline(-1,0)
-abline(.0001,0)
